--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Happy Birthday, my love.
 
   <script>
     function goNext() {
-  window.location.href = "bday.html";
+  window.location.href = "script.html";
 }
 
     
@@ -177,3 +177,4 @@ Happy Birthday, my love.
 
 </body>
 </html>
+
