--- a/script.html
+++ b/script.html
@@ -114,7 +114,7 @@ On your birthday and every day, know this: my heart is yours, in every moment, e
 
 <script>
   function goToVideo() {
-    window.location.href = "birth day.html";
+    window.location.href = "style.html";
   }
 
   // 🎉 CONFETTI BURST
@@ -140,3 +140,4 @@ On your birthday and every day, know this: my heart is yours, in every moment, e
 
 </body>
 </html>
+
