--- a/script.html
+++ b/script.html
@@ -69,8 +69,13 @@
 </head>
 
 <body>
-  <button class="next-btn" onclick="goToVideo()">
-  💖 Welcome to cute vdo 💖
+  .next.btn {
+  display: block;           /* makes button a block element */
+  margin: 20px auto 0 auto; /* 20px top margin, horizontally centered */
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
 </button>
 
 
@@ -140,4 +145,5 @@ On your birthday and every day, know this: my heart is yours, in every moment, e
 
 </body>
 </html>
+
 
