--- a/script.html
+++ b/script.html
@@ -69,12 +69,15 @@
 </head>
 
 <body>
-  .next.btn {
-  display: block;           /* makes button a block element */
-  margin: 20px auto 0 auto; /* 20px top margin, horizontally centered */
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
+  video {
+  display: block;
+  margin: 0 auto;  /* centers the video */
+}
+
+.next.btn {
+  display: block;
+  margin: 15px auto 0 auto; /* space below video */
+
 }
 </button>
 
@@ -145,5 +148,6 @@ On your birthday and every day, know this: my heart is yours, in every moment, e
 
 </body>
 </html>
+
 
 
