--- a/script.html
+++ b/script.html
@@ -69,14 +69,17 @@
 </head>
 
 <body>
-  video {
-  display: block;
-  margin: 0 auto;  /* centers the video */
-}
+  <body>
+  <video id="cuteVideo" width="600" controls>
+    <source src="pookie.mp4" type="video/mp4">
+  </video>
 
-.next.btn {
-  display: block;
-  margin: 15px auto 0 auto; /* space below video */
+  <br>
+
+  <button class="next btn" onclick="goToVideo()">
+    Welcome to Cute Video
+  </button>
+</body>
 
 }
 </button>
@@ -148,6 +151,7 @@ On your birthday and every day, know this: my heart is yours, in every moment, e
 
 </body>
 </html>
+
 
 
 
